fix: update color scheme in highlighting.css for improved readability

--- a/site/assets/ananke/css/highlighting.css
+++ b/site/assets/ananke/css/highlighting.css
@@ -1,14 +1,14 @@
 /* Generated using: hugo gen chromastyles --style=tokyonight-day */
 
-/* Background */ .bg { color:#3760bf;background-color:#e1e2e7; }
-/* PreWrapper */ .chroma { color:#3760bf;background-color:#e1e2e7; }
+/* Background */ .bg { color:#0d3b66;background-color:#f5f6f8; }
+/* PreWrapper */ .chroma { color:#0d3b66;background-color:#f5f6f8; }
 /* Error */ .chroma .err { color:#c64343 }
 /* LineLink */ .chroma .lnlinks { outline:none;text-decoration:none;color:inherit }
 /* LineTableTD */ .chroma .lntd { vertical-align:top;padding:0;margin:0;border:0; }
 /* LineTable */ .chroma .lntable { border-spacing:0;padding:0;margin:0;border:0; }
-/* LineHighlight */ .chroma .hl { background-color:#a1a6c5 }
-/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#6172b0 }
-/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#6172b0 }
+/* LineHighlight */ .chroma .hl { background-color:#dfe4f0 }
+/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#4a5568 }
+/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#4a5568 }
 /* Line */ .chroma .line { display:flex; }
 /* Keyword */ .chroma .k { color:#9854f1 }
 /* KeywordConstant */ .chroma .kc { color:#8c6c3e }
